add send email api, improve apis and readme doc
